--- a/app/views/static/user.html.erb
+++ b/app/views/static/user.html.erb
@@ -1,5 +1,6 @@
+log in
 <form class="user-form" action="/api/sessions" method="post">
-  <input type="text" name="email" value="">
-  <input type="password" name="password" value="">
+  <input type="text" name="session[email]" value="">
+  <input type="password" name="session[password]" value="">
   <input type="submit" value="submit">
 </form>
