--- a/app/views/static/user.html.erb
+++ b/app/views/static/user.html.erb
@@ -1,6 +1,20 @@
-log in
+log in<br>
 <form class="user-form" action="/api/sessions" method="post">
   <input type="text" name="session[email]" value="">
   <input type="password" name="session[password]" value="">
   <input type="submit" value="submit">
+</form>
+<br><br>
+register<br>
+<form class="new-form" action="/api/users" method="post">
+  <input type="text" name="user[email]" value="">
+  <input type="password" name="user[password]" value="">
+  <input type="password" name="user[password_confirmation]" value="">
+  <input type="submit" value="submit">
+</form>
+<br><br>
+
+<form class="logoutbtn" action="/api/session/1" method="post">
+  <input type="hidden" name="_method" value="delete">
+  <input type="submit" name="" value="LOGOUT">
 </form>
