Update login test page

--- a/app/views/static/user.html.erb
+++ b/app/views/static/user.html.erb
@@ -14,7 +14,7 @@ register<br>
 </form>
 <br><br>
 
-<form class="logoutbtn" action="/api/sessions/{auth_token}" method="post">
+<form class="logoutbtn" action="/api/sessions/kthpmpcrYFXjT5KdA-Uj" method="post">
   <input type="hidden" name="_method" value="delete">
   <input type="submit" name="" value="LOGOUT">
 </form>
