--- a/app/views/static/_stock_queries_table.html.erb
+++ b/app/views/static/_stock_queries_table.html.erb
@@ -3,9 +3,9 @@
   <table class="table table-striped table-bordered">
     <thead>
       <tr>
-        <th>Description</th>
-        <th>Action</th>
-        <th>Route</th>
+        <th class="col-md-5">Description</th>
+        <th class="col-md-1">Action</th>
+        <th class="col-md-6">Route</th>
       </tr>
     </thead>
     <tbody>
