styleize the docs page

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,6 +1,11 @@
 <div class="container" style="width: 60%">
+  <h1 style="text-align: center">Welcome to the Docs!!</h1>
+  <br><hr>
   <%= render 'stock_queries_table' %>
+  <br>
   <%= render 'purchased_stocks_table' %>
+  <br>
   <%= render 'portfolio_table' %>
+  <br>
   <%= render 'users_table' %>
 </div>
